--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -556,6 +556,10 @@ section {
   float: left;
 }
 
+.body-text-area h5 {
+  font-family: $font-family--heavy;
+}
+
 .email-signup-text {
   padding: 50px;
 }
