--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -68,7 +68,7 @@
 			}
 		}
 		@include mq($tablet-width, 'max-width') {
-		   top: 43px; right: 35px;
+		   top: 30px; right: 35px;
 		}
 
 	}
@@ -464,6 +464,9 @@
 .search {
 	display: block;
 	margin: 60px 50px 50px 50px;
+	@include mq($tablet-width, 'max-width') {
+	   margin: 10px 50px 10px 50px;
+	}
 
 	.input {
 		max-width: 100%;
