--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -592,9 +592,14 @@ section {
 
 
 .icon-box {
-  width: 33.3%;
   float: left;
   padding: 20px 120px 20px 0;
+
+  @include mq($mobile-landscape-width, 'max-width') {
+     padding: 20px;
+     text-align: center;
+  }
+
 
   h5 {
     font-family: $font-family--bold;
