--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -562,6 +562,10 @@ section {
 .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
+
+  @include mq($mobile-landscape-width, 'max-width') {
+     padding: 20px;
+  }
 }
 
 .body-text-area h5 {
