--- a/style.css
+++ b/style.css
@@ -5328,7 +5328,13 @@ main {
   z-index: 10;
   padding: 50px 50px 50px 50px;
 }
-/* line 371, sass/layout/_main.scss */
+@media screen and (max-width: 480px) {
+  /* line 366, sass/layout/_main.scss */
+  .banner-text {
+    padding: 20px;
+  }
+}
+/* line 375, sass/layout/_main.scss */
 .banner-text .banner-title {
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 3.25em;
@@ -5336,39 +5342,39 @@ main {
   margin-bottom: 25px;
   color: white;
 }
-/* line 379, sass/layout/_main.scss */
+/* line 383, sass/layout/_main.scss */
 .banner-text .banner-cta {
   font-size: 0.75em;
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Bold";
 }
-/* line 384, sass/layout/_main.scss */
+/* line 388, sass/layout/_main.scss */
 .banner-text .banner-cta a {
   color: white;
 }
 
-/* line 390, sass/layout/_main.scss */
+/* line 394, sass/layout/_main.scss */
 .page-template-story .banner-inner {
   height: 500px;
 }
-/* line 393, sass/layout/_main.scss */
+/* line 397, sass/layout/_main.scss */
 .page-template-story .banner-inner .banner-text {
   text-align: center;
   margin-top: 260px;
 }
 
-/* line 399, sass/layout/_main.scss */
+/* line 403, sass/layout/_main.scss */
 .banner-inner {
   height: 300px;
 }
 @media screen and (min-width: 1200px) {
-  /* line 399, sass/layout/_main.scss */
+  /* line 403, sass/layout/_main.scss */
   .banner-inner {
     height: 400px;
   }
 }
 
-/* line 409, sass/layout/_main.scss */
+/* line 413, sass/layout/_main.scss */
 .cta-small {
   font-size: 0.75em;
   text-transform: uppercase;
@@ -5377,7 +5383,7 @@ main {
   position: relative;
   overflow: initial;
 }
-/* line 417, sass/layout/_main.scss */
+/* line 421, sass/layout/_main.scss */
 .cta-small .cta-text {
   position: relative;
   right: 0px;
@@ -5385,7 +5391,7 @@ main {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 424, sass/layout/_main.scss */
+/* line 428, sass/layout/_main.scss */
 .cta-small .cta-text .right {
   display: inline-block;
   width: 1.5em;
@@ -5395,7 +5401,7 @@ main {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 434, sass/layout/_main.scss */
+/* line 438, sass/layout/_main.scss */
 .cta-small .cta-text .right:after {
   content: '';
   display: inline-block;
@@ -5408,7 +5414,7 @@ main {
   transform: rotate(45deg);
 }
 
-/* line 448, sass/layout/_main.scss */
+/* line 452, sass/layout/_main.scss */
 .cta-big {
   margin-top: 50px;
   font-size: 0.75em;
@@ -5418,7 +5424,7 @@ main {
   position: relative;
   overflow: initial;
 }
-/* line 457, sass/layout/_main.scss */
+/* line 461, sass/layout/_main.scss */
 .cta-big .cta-text {
   position: relative;
   right: 0px;
@@ -5426,7 +5432,7 @@ main {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 464, sass/layout/_main.scss */
+/* line 468, sass/layout/_main.scss */
 .cta-big .cta-text .right {
   display: inline-block;
   width: 7em;
@@ -5435,7 +5441,7 @@ main {
   margin-left: 1.5em;
   text-align: center;
 }
-/* line 473, sass/layout/_main.scss */
+/* line 477, sass/layout/_main.scss */
 .cta-big .cta-text .right:after {
   content: '';
   display: inline-block;
@@ -5448,37 +5454,37 @@ main {
   transform: rotate(45deg);
 }
 
-/* line 490, sass/layout/_main.scss */
+/* line 494, sass/layout/_main.scss */
 .callout-news {
   padding: 25px;
   height: 400px;
 }
-/* line 494, sass/layout/_main.scss */
+/* line 498, sass/layout/_main.scss */
 .callout-news .callout-news-headline {
   margin-bottom: 15px;
 }
-/* line 497, sass/layout/_main.scss */
+/* line 501, sass/layout/_main.scss */
 .callout-news .callout-news-headline h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 499, sass/layout/_main.scss */
+/* line 503, sass/layout/_main.scss */
 .callout-news .callout-news-headline h5 a {
   color: #3a3a3a;
 }
-/* line 504, sass/layout/_main.scss */
+/* line 508, sass/layout/_main.scss */
 .callout-news .callout-news-headline h6 {
   margin-bottom: 25px;
   font-family: "Avenir Next Cyr W00 Bold";
   color: #3a3a3a;
 }
 
-/* line 512, sass/layout/_main.scss */
+/* line 516, sass/layout/_main.scss */
 .information-holder {
   float: left;
   width: 100%;
 }
 
-/* line 517, sass/layout/_main.scss */
+/* line 521, sass/layout/_main.scss */
 .information-video {
   background: black;
   float: left;
@@ -5486,20 +5492,20 @@ main {
   height: 100%;
 }
 
-/* line 524, sass/layout/_main.scss */
+/* line 528, sass/layout/_main.scss */
 .information-network {
   border-left: 10px solid white;
   float: left;
   width: 100%;
 }
 @media screen and (max-width: 768px) {
-  /* line 524, sass/layout/_main.scss */
+  /* line 528, sass/layout/_main.scss */
   .information-network {
     border: 0;
   }
 }
 
-/* line 534, sass/layout/_main.scss */
+/* line 538, sass/layout/_main.scss */
 .information-bar {
   height: 52px;
   background-color: #fec935;
@@ -5510,17 +5516,17 @@ main {
   width: 100%;
 }
 
-/* line 544, sass/layout/_main.scss */
+/* line 548, sass/layout/_main.scss */
 .person {
   width: 25%;
   float: left;
 }
-/* line 548, sass/layout/_main.scss */
+/* line 552, sass/layout/_main.scss */
 .person img {
   float: left;
 }
 
-/* line 555, sass/layout/_main.scss */
+/* line 559, sass/layout/_main.scss */
 section {
   float: left;
   position: relative;
@@ -5528,103 +5534,109 @@ section {
   margin-bottom: 10px;
 }
 
-/* line 562, sass/layout/_main.scss */
+/* line 566, sass/layout/_main.scss */
 .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
 }
 @media screen and (max-width: 480px) {
-  /* line 562, sass/layout/_main.scss */
+  /* line 566, sass/layout/_main.scss */
   .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
     padding: 20px;
   }
 }
 
-/* line 571, sass/layout/_main.scss */
+/* line 575, sass/layout/_main.scss */
 .body-text-area h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
 
-/* line 575, sass/layout/_main.scss */
+/* line 579, sass/layout/_main.scss */
 .email-signup-text {
   padding: 50px;
 }
 
-/* line 579, sass/layout/_main.scss */
+/* line 583, sass/layout/_main.scss */
 .schedule-text {
   float: left;
   padding: 50px;
 }
 
-/* line 584, sass/layout/_main.scss */
+/* line 588, sass/layout/_main.scss */
 .quote-text {
   padding: 50px;
   text-align: center;
 }
+@media screen and (max-width: 480px) {
+  /* line 588, sass/layout/_main.scss */
+  .quote-text {
+    padding: 20px;
+  }
+}
 
-/* line 589, sass/layout/_main.scss */
+/* line 597, sass/layout/_main.scss */
 .image {
   height: 400px;
 }
 
-/* line 593, sass/layout/_main.scss */
+/* line 601, sass/layout/_main.scss */
 .image-with-text {
   height: 600px;
 }
 
-/* line 598, sass/layout/_main.scss */
+/* line 606, sass/layout/_main.scss */
 .icon-box {
   float: left;
   padding: 20px 120px 20px 0;
 }
 @media screen and (max-width: 480px) {
-  /* line 598, sass/layout/_main.scss */
+  /* line 606, sass/layout/_main.scss */
   .icon-box {
     padding: 20px;
     text-align: center;
   }
 }
-/* line 608, sass/layout/_main.scss */
+/* line 616, sass/layout/_main.scss */
 .icon-box h5 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 614, sass/layout/_main.scss */
+/* line 622, sass/layout/_main.scss */
 .listing-text h3 a {
   color: white;
 }
 
-/* line 619, sass/layout/_main.scss */
+/* line 627, sass/layout/_main.scss */
 .schedule-box {
   width: 50%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 624, sass/layout/_main.scss */
+/* line 632, sass/layout/_main.scss */
 .schedule-box .strong {
   font-family: "Avenir Next Cyr W00 Bold";
 }
-/* line 627, sass/layout/_main.scss */
+/* line 635, sass/layout/_main.scss */
 .schedule-box .blue {
   color: #0ebde8;
 }
 
-/* line 632, sass/layout/_main.scss */
+/* line 640, sass/layout/_main.scss */
 .buttons h3, .form h3 {
   margin-bottom: 0;
 }
 
-/* line 636, sass/layout/_main.scss */
+/* line 644, sass/layout/_main.scss */
 .buttons p, .form p {
   margin-bottom: 15px;
 }
 
-/* line 640, sass/layout/_main.scss */
+/* line 648, sass/layout/_main.scss */
 .regular-font {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 
-/* line 644, sass/layout/_main.scss */
+/* line 652, sass/layout/_main.scss */
 .buttons-cta {
   display: inline;
   padding: 25px 35px 25px 25px;
@@ -5634,7 +5646,7 @@ section {
   position: relative;
   float: left;
 }
-/* line 653, sass/layout/_main.scss */
+/* line 661, sass/layout/_main.scss */
 .buttons-cta .right {
   display: inline-block;
   width: 1.5em;
@@ -5645,7 +5657,7 @@ section {
   border: 0.1em solid #2791bd;
   line-height: 1.1em;
 }
-/* line 664, sass/layout/_main.scss */
+/* line 672, sass/layout/_main.scss */
 .buttons-cta .right:after {
   content: '';
   display: inline-block;
@@ -5659,24 +5671,24 @@ section {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
-/* line 678, sass/layout/_main.scss */
+/* line 686, sass/layout/_main.scss */
 .buttons-cta:hover {
   background: white;
   color: #2791bd;
   border: 3px solid #2791bd;
   padding: 22px 32px 22px 22px;
 }
-/* line 684, sass/layout/_main.scss */
+/* line 692, sass/layout/_main.scss */
 .buttons-cta:hover .right {
   border: 0.1em solid #2791bd;
 }
-/* line 687, sass/layout/_main.scss */
+/* line 695, sass/layout/_main.scss */
 .buttons-cta:hover .right::after {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
 
-/* line 696, sass/layout/_main.scss */
+/* line 704, sass/layout/_main.scss */
 .submit-buttons {
   display: inline;
   padding: 10px 20px 10px 10px;
@@ -5687,7 +5699,7 @@ section {
   float: left;
   margin-top: 30px;
 }
-/* line 706, sass/layout/_main.scss */
+/* line 714, sass/layout/_main.scss */
 .submit-buttons .right {
   display: inline-block;
   width: 1.5em;
@@ -5697,7 +5709,7 @@ section {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 716, sass/layout/_main.scss */
+/* line 724, sass/layout/_main.scss */
 .submit-buttons .right:after {
   content: '';
   display: inline-block;
@@ -5710,44 +5722,44 @@ section {
   transform: rotate(45deg);
 }
 
-/* line 730, sass/layout/_main.scss */
+/* line 738, sass/layout/_main.scss */
 .content-half {
   padding-right: 20px;
   margin-top: 20px;
 }
-/* line 734, sass/layout/_main.scss */
+/* line 742, sass/layout/_main.scss */
 .content-half h5 {
   font-family: "Avenir Next Cyr W00 Bold";
   margin-bottom: 0;
 }
 
-/* line 740, sass/layout/_main.scss */
+/* line 748, sass/layout/_main.scss */
 .content-text {
   padding: 50px;
   float: left;
 }
-/* line 744, sass/layout/_main.scss */
+/* line 752, sass/layout/_main.scss */
 .content-text p {
   color: black;
 }
-/* line 748, sass/layout/_main.scss */
+/* line 756, sass/layout/_main.scss */
 .content-text h4 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 754, sass/layout/_main.scss */
+/* line 762, sass/layout/_main.scss */
 .side-text p {
   margin-bottom: 3px;
   font-size: 10px;
   color: #494949;
 }
 
-/* line 761, sass/layout/_main.scss */
+/* line 769, sass/layout/_main.scss */
 #content {
   float: left;
 }
 
-/* line 766, sass/layout/_main.scss */
+/* line 774, sass/layout/_main.scss */
 .thumbnail {
   float: left;
   width: 100%;
@@ -5755,32 +5767,32 @@ section {
   margin-bottom: 15px;
 }
 
-/* line 773, sass/layout/_main.scss */
+/* line 781, sass/layout/_main.scss */
 .single-post main, .blog main, .page-template-global-network main, main {
   border-top: 5px solid #fec935;
 }
 
-/* line 777, sass/layout/_main.scss */
+/* line 785, sass/layout/_main.scss */
 .parent-page-residential-experiences main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 785, sass/layout/_main.scss */
+/* line 793, sass/layout/_main.scss */
 .parent-page-online main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 789, sass/layout/_main.scss */
+/* line 797, sass/layout/_main.scss */
 .parent-page-residential main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 793, sass/layout/_main.scss */
+/* line 801, sass/layout/_main.scss */
 .parent-page-research-ideas main {
   border-top: 5px solid #712880;
 }
 
-/* line 803, sass/layout/_main.scss */
+/* line 811, sass/layout/_main.scss */
 .blog-sidebar {
   padding: 50px 30px;
   background-color: #3a3a3a;
@@ -5789,14 +5801,14 @@ section {
   width: 100%;
 }
 
-/* line 811, sass/layout/_main.scss */
+/* line 819, sass/layout/_main.scss */
 .blog-content {
   float: left;
   padding: 50px;
   width: 100%;
 }
 
-/* line 817, sass/layout/_main.scss */
+/* line 825, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -5809,49 +5821,49 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 829, sass/layout/_main.scss */
+/* line 837, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 834, sass/layout/_main.scss */
+/* line 842, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 838, sass/layout/_main.scss */
+/* line 846, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 841, sass/layout/_main.scss */
+/* line 849, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 846, sass/layout/_main.scss */
+/* line 854, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 851, sass/layout/_main.scss */
+/* line 859, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 857, sass/layout/_main.scss */
+/* line 865, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 862, sass/layout/_main.scss */
+/* line 870, sass/layout/_main.scss */
 .blog-categories ul li:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-/* line 864, sass/layout/_main.scss */
+/* line 872, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
@@ -5859,39 +5871,39 @@ section {
   opacity: 1;
 }
 
-/* line 874, sass/layout/_main.scss */
+/* line 882, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 879, sass/layout/_main.scss */
+/* line 887, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 882, sass/layout/_main.scss */
+/* line 890, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
 }
-/* line 887, sass/layout/_main.scss */
+/* line 895, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 890, sass/layout/_main.scss */
+/* line 898, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 895, sass/layout/_main.scss */
+/* line 903, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 900, sass/layout/_main.scss */
+/* line 908, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 904, sass/layout/_main.scss */
+/* line 912, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
@@ -5902,17 +5914,17 @@ section {
   line-height: 20px;
 }
 
-/* line 914, sass/layout/_main.scss */
+/* line 922, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 918, sass/layout/_main.scss */
+/* line 926, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 922, sass/layout/_main.scss */
+/* line 930, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -5920,51 +5932,51 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 929, sass/layout/_main.scss */
+/* line 937, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 932, sass/layout/_main.scss */
+/* line 940, sass/layout/_main.scss */
 .social-icons a {
   color: #a9a9a9;
 }
-/* line 936, sass/layout/_main.scss */
+/* line 944, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 942, sass/layout/_main.scss */
+/* line 950, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 946, sass/layout/_main.scss */
+/* line 954, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 951, sass/layout/_main.scss */
+/* line 959, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 957, sass/layout/_main.scss */
+/* line 965, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 965, sass/layout/_main.scss */
+/* line 973, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 969, sass/layout/_main.scss */
+/* line 977, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
@@ -5972,22 +5984,22 @@ section {
   background-color: black;
 }
 
-/* line 977, sass/layout/_main.scss */
+/* line 985, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 50px;
   height: 100%;
 }
-/* line 982, sass/layout/_main.scss */
+/* line 990, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 986, sass/layout/_main.scss */
+/* line 994, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 991, sass/layout/_main.scss */
+/* line 999, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -5996,7 +6008,7 @@ section {
   bottom: 0;
 }
 
-/* line 999, sass/layout/_main.scss */
+/* line 1007, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -6005,7 +6017,7 @@ section {
   background-color: white;
 }
 
-/* line 1007, sass/layout/_main.scss */
+/* line 1015, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -6016,7 +6028,7 @@ section {
   display: inline;
 }
 
-/* line 1017, sass/layout/_main.scss */
+/* line 1025, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
@@ -6027,7 +6039,7 @@ section {
   display: inline;
 }
 
-/* line 1027, sass/layout/_main.scss */
+/* line 1035, sass/layout/_main.scss */
 #loadmore-posts {
   clear: both;
   width: 20%;
@@ -6041,25 +6053,25 @@ section {
   color: white;
   margin-top: 10px;
 }
-/* line 1040, sass/layout/_main.scss */
+/* line 1048, sass/layout/_main.scss */
 #loadmore-posts:hover {
   background-color: white;
   color: #fec935;
   cursor: pointer;
 }
 
-/* line 1047, sass/layout/_main.scss */
+/* line 1055, sass/layout/_main.scss */
 .page-numbers {
   display: none;
 }
 
-/* line 1048, sass/layout/_main.scss */
+/* line 1056, sass/layout/_main.scss */
 a.next.page-numbers {
   display: block;
   color: white;
 }
 
-/* line 1049, sass/layout/_main.scss */
+/* line 1057, sass/layout/_main.scss */
 a.next.page-numbers:hover {
   display: block;
   color: #fec935;
