--- a/style.css
+++ b/style.css
@@ -5912,8 +5912,14 @@ section {
   padding: 50px;
   width: 100%;
 }
+@media screen and (max-width: 480px) {
+  /* line 825, sass/layout/_main.scss */
+  .blog-content {
+    padding: 20px;
+  }
+}
 
-/* line 831, sass/layout/_main.scss */
+/* line 836, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -5926,49 +5932,49 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 843, sass/layout/_main.scss */
+/* line 848, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 848, sass/layout/_main.scss */
+/* line 853, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 852, sass/layout/_main.scss */
+/* line 857, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 855, sass/layout/_main.scss */
+/* line 860, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 860, sass/layout/_main.scss */
+/* line 865, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 865, sass/layout/_main.scss */
+/* line 870, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 871, sass/layout/_main.scss */
+/* line 876, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 876, sass/layout/_main.scss */
+/* line 881, sass/layout/_main.scss */
 .blog-categories ul li:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-/* line 878, sass/layout/_main.scss */
+/* line 883, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
@@ -5976,39 +5982,40 @@ section {
   opacity: 1;
 }
 
-/* line 888, sass/layout/_main.scss */
+/* line 893, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 893, sass/layout/_main.scss */
+/* line 898, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 896, sass/layout/_main.scss */
+/* line 901, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
+  word-break: break-word;
 }
-/* line 901, sass/layout/_main.scss */
+/* line 907, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 904, sass/layout/_main.scss */
+/* line 910, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 909, sass/layout/_main.scss */
+/* line 915, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 914, sass/layout/_main.scss */
+/* line 920, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 918, sass/layout/_main.scss */
+/* line 924, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
@@ -6019,17 +6026,17 @@ section {
   line-height: 20px;
 }
 
-/* line 928, sass/layout/_main.scss */
+/* line 934, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 932, sass/layout/_main.scss */
+/* line 938, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 936, sass/layout/_main.scss */
+/* line 942, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -6037,51 +6044,51 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 943, sass/layout/_main.scss */
+/* line 949, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 946, sass/layout/_main.scss */
+/* line 952, sass/layout/_main.scss */
 .social-icons a {
   color: #a9a9a9;
 }
-/* line 950, sass/layout/_main.scss */
+/* line 956, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 956, sass/layout/_main.scss */
+/* line 962, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 960, sass/layout/_main.scss */
+/* line 966, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 965, sass/layout/_main.scss */
+/* line 971, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 971, sass/layout/_main.scss */
+/* line 977, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 979, sass/layout/_main.scss */
+/* line 985, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 983, sass/layout/_main.scss */
+/* line 989, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
@@ -6089,22 +6096,22 @@ section {
   background-color: black;
 }
 
-/* line 991, sass/layout/_main.scss */
+/* line 997, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 50px;
   height: 100%;
 }
-/* line 996, sass/layout/_main.scss */
+/* line 1002, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 1000, sass/layout/_main.scss */
+/* line 1006, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 1005, sass/layout/_main.scss */
+/* line 1011, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -6113,7 +6120,7 @@ section {
   bottom: 0;
 }
 
-/* line 1013, sass/layout/_main.scss */
+/* line 1019, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -6122,7 +6129,7 @@ section {
   background-color: white;
 }
 
-/* line 1021, sass/layout/_main.scss */
+/* line 1027, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -6133,7 +6140,7 @@ section {
   display: inline;
 }
 
-/* line 1031, sass/layout/_main.scss */
+/* line 1037, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
@@ -6144,7 +6151,7 @@ section {
   display: inline;
 }
 
-/* line 1041, sass/layout/_main.scss */
+/* line 1047, sass/layout/_main.scss */
 #loadmore-posts {
   clear: both;
   width: 20%;
@@ -6158,25 +6165,25 @@ section {
   color: white;
   margin-top: 10px;
 }
-/* line 1054, sass/layout/_main.scss */
+/* line 1060, sass/layout/_main.scss */
 #loadmore-posts:hover {
   background-color: white;
   color: #fec935;
   cursor: pointer;
 }
 
-/* line 1061, sass/layout/_main.scss */
+/* line 1067, sass/layout/_main.scss */
 .page-numbers {
   display: none;
 }
 
-/* line 1062, sass/layout/_main.scss */
+/* line 1068, sass/layout/_main.scss */
 a.next.page-numbers {
   display: block;
   color: white;
 }
 
-/* line 1063, sass/layout/_main.scss */
+/* line 1069, sass/layout/_main.scss */
 a.next.page-numbers:hover {
   display: block;
   color: #fec935;
