--- a/style.css
+++ b/style.css
@@ -5919,7 +5919,7 @@ section {
   }
 }
 
-/* line 836, sass/layout/_main.scss */
+/* line 835, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -5932,49 +5932,49 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 848, sass/layout/_main.scss */
+/* line 847, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 853, sass/layout/_main.scss */
+/* line 852, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 857, sass/layout/_main.scss */
+/* line 856, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 860, sass/layout/_main.scss */
+/* line 859, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 865, sass/layout/_main.scss */
+/* line 864, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 870, sass/layout/_main.scss */
+/* line 869, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 876, sass/layout/_main.scss */
+/* line 875, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 881, sass/layout/_main.scss */
+/* line 880, sass/layout/_main.scss */
 .blog-categories ul li:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-/* line 883, sass/layout/_main.scss */
+/* line 882, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
@@ -5982,40 +5982,40 @@ section {
   opacity: 1;
 }
 
-/* line 893, sass/layout/_main.scss */
+/* line 892, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 898, sass/layout/_main.scss */
+/* line 897, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 901, sass/layout/_main.scss */
+/* line 900, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
   word-break: break-word;
 }
-/* line 907, sass/layout/_main.scss */
+/* line 906, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 910, sass/layout/_main.scss */
+/* line 909, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 915, sass/layout/_main.scss */
+/* line 914, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 920, sass/layout/_main.scss */
+/* line 919, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 924, sass/layout/_main.scss */
+/* line 923, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
@@ -6026,17 +6026,17 @@ section {
   line-height: 20px;
 }
 
-/* line 934, sass/layout/_main.scss */
+/* line 933, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 938, sass/layout/_main.scss */
+/* line 937, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 942, sass/layout/_main.scss */
+/* line 941, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -6044,51 +6044,51 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 949, sass/layout/_main.scss */
+/* line 948, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 952, sass/layout/_main.scss */
+/* line 951, sass/layout/_main.scss */
 .social-icons a {
   color: #a9a9a9;
 }
-/* line 956, sass/layout/_main.scss */
+/* line 955, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 962, sass/layout/_main.scss */
+/* line 961, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 966, sass/layout/_main.scss */
+/* line 965, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 971, sass/layout/_main.scss */
+/* line 970, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 977, sass/layout/_main.scss */
+/* line 976, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 985, sass/layout/_main.scss */
+/* line 984, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 989, sass/layout/_main.scss */
+/* line 988, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
@@ -6096,22 +6096,22 @@ section {
   background-color: black;
 }
 
-/* line 997, sass/layout/_main.scss */
+/* line 996, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 50px;
   height: 100%;
 }
-/* line 1002, sass/layout/_main.scss */
+/* line 1001, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 1006, sass/layout/_main.scss */
+/* line 1005, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 1011, sass/layout/_main.scss */
+/* line 1010, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -6120,7 +6120,7 @@ section {
   bottom: 0;
 }
 
-/* line 1019, sass/layout/_main.scss */
+/* line 1018, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -6129,7 +6129,7 @@ section {
   background-color: white;
 }
 
-/* line 1027, sass/layout/_main.scss */
+/* line 1026, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -6140,7 +6140,7 @@ section {
   display: inline;
 }
 
-/* line 1037, sass/layout/_main.scss */
+/* line 1036, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
@@ -6151,8 +6151,9 @@ section {
   display: inline;
 }
 
-/* line 1047, sass/layout/_main.scss */
+/* line 1046, sass/layout/_main.scss */
 #loadmore-posts {
+  display: none;
   clear: both;
   width: 20%;
   text-align: center;
