--- a/style.css
+++ b/style.css
@@ -5465,21 +5465,22 @@ main {
 /* line 403, sass/layout/_main.scss */
 .page-template-story .banner-inner .banner-text {
   text-align: center;
-  margin-top: 260px;
+  position: absolute;
+  bottom: 30px;
 }
 
-/* line 409, sass/layout/_main.scss */
+/* line 410, sass/layout/_main.scss */
 .banner-inner {
   height: 300px;
 }
 @media screen and (min-width: 1200px) {
-  /* line 409, sass/layout/_main.scss */
+  /* line 410, sass/layout/_main.scss */
   .banner-inner {
     height: 400px;
   }
 }
 
-/* line 419, sass/layout/_main.scss */
+/* line 420, sass/layout/_main.scss */
 .cta-small {
   font-size: 0.75em;
   text-transform: uppercase;
@@ -5488,7 +5489,7 @@ main {
   position: relative;
   overflow: initial;
 }
-/* line 427, sass/layout/_main.scss */
+/* line 428, sass/layout/_main.scss */
 .cta-small .cta-text {
   position: relative;
   right: 0px;
@@ -5496,7 +5497,7 @@ main {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 434, sass/layout/_main.scss */
+/* line 435, sass/layout/_main.scss */
 .cta-small .cta-text .right {
   display: inline-block;
   width: 1.5em;
@@ -5506,7 +5507,7 @@ main {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 444, sass/layout/_main.scss */
+/* line 445, sass/layout/_main.scss */
 .cta-small .cta-text .right:after {
   content: '';
   display: inline-block;
@@ -5519,7 +5520,7 @@ main {
   transform: rotate(45deg);
 }
 
-/* line 458, sass/layout/_main.scss */
+/* line 459, sass/layout/_main.scss */
 .cta-big {
   margin-top: 50px;
   font-size: 0.75em;
@@ -5529,7 +5530,7 @@ main {
   position: relative;
   overflow: initial;
 }
-/* line 467, sass/layout/_main.scss */
+/* line 468, sass/layout/_main.scss */
 .cta-big .cta-text {
   position: relative;
   right: 0px;
@@ -5537,7 +5538,7 @@ main {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-/* line 474, sass/layout/_main.scss */
+/* line 475, sass/layout/_main.scss */
 .cta-big .cta-text .right {
   display: inline-block;
   width: 7em;
@@ -5546,7 +5547,7 @@ main {
   margin-left: 1.5em;
   text-align: center;
 }
-/* line 483, sass/layout/_main.scss */
+/* line 484, sass/layout/_main.scss */
 .cta-big .cta-text .right:after {
   content: '';
   display: inline-block;
@@ -5559,37 +5560,37 @@ main {
   transform: rotate(45deg);
 }
 
-/* line 500, sass/layout/_main.scss */
+/* line 501, sass/layout/_main.scss */
 .callout-news {
   padding: 25px;
   height: 400px;
 }
-/* line 504, sass/layout/_main.scss */
+/* line 505, sass/layout/_main.scss */
 .callout-news .callout-news-headline {
   margin-bottom: 15px;
 }
-/* line 507, sass/layout/_main.scss */
+/* line 508, sass/layout/_main.scss */
 .callout-news .callout-news-headline h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 509, sass/layout/_main.scss */
+/* line 510, sass/layout/_main.scss */
 .callout-news .callout-news-headline h5 a {
   color: #3a3a3a;
 }
-/* line 514, sass/layout/_main.scss */
+/* line 515, sass/layout/_main.scss */
 .callout-news .callout-news-headline h6 {
   margin-bottom: 25px;
   font-family: "Avenir Next Cyr W00 Bold";
   color: #3a3a3a;
 }
 
-/* line 522, sass/layout/_main.scss */
+/* line 523, sass/layout/_main.scss */
 .information-holder {
   float: left;
   width: 100%;
 }
 
-/* line 527, sass/layout/_main.scss */
+/* line 528, sass/layout/_main.scss */
 .information-video {
   background: black;
   float: left;
@@ -5597,20 +5598,20 @@ main {
   height: 100%;
 }
 
-/* line 534, sass/layout/_main.scss */
+/* line 535, sass/layout/_main.scss */
 .information-network {
   border-left: 10px solid white;
   float: left;
   width: 100%;
 }
 @media screen and (max-width: 768px) {
-  /* line 534, sass/layout/_main.scss */
+  /* line 535, sass/layout/_main.scss */
   .information-network {
     border: 0;
   }
 }
 
-/* line 544, sass/layout/_main.scss */
+/* line 545, sass/layout/_main.scss */
 .information-bar {
   height: 52px;
   background-color: #fec935;
@@ -5621,17 +5622,17 @@ main {
   width: 100%;
 }
 
-/* line 554, sass/layout/_main.scss */
+/* line 555, sass/layout/_main.scss */
 .person {
   width: 25%;
   float: left;
 }
-/* line 558, sass/layout/_main.scss */
+/* line 559, sass/layout/_main.scss */
 .person img {
   float: left;
 }
 
-/* line 565, sass/layout/_main.scss */
+/* line 566, sass/layout/_main.scss */
 section {
   float: left;
   position: relative;
@@ -5639,109 +5640,109 @@ section {
   margin-bottom: 10px;
 }
 
-/* line 572, sass/layout/_main.scss */
+/* line 573, sass/layout/_main.scss */
 .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
 }
 @media screen and (max-width: 480px) {
-  /* line 572, sass/layout/_main.scss */
+  /* line 573, sass/layout/_main.scss */
   .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
     padding: 20px;
   }
 }
 
-/* line 581, sass/layout/_main.scss */
+/* line 582, sass/layout/_main.scss */
 .body-text-area h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
 
-/* line 585, sass/layout/_main.scss */
+/* line 586, sass/layout/_main.scss */
 .email-signup-text {
   padding: 50px;
 }
 
-/* line 589, sass/layout/_main.scss */
+/* line 590, sass/layout/_main.scss */
 .schedule-text {
   float: left;
   padding: 50px;
 }
 
-/* line 594, sass/layout/_main.scss */
+/* line 595, sass/layout/_main.scss */
 .quote-text {
   padding: 50px;
   text-align: center;
 }
 @media screen and (max-width: 480px) {
-  /* line 594, sass/layout/_main.scss */
+  /* line 595, sass/layout/_main.scss */
   .quote-text {
     padding: 20px;
   }
 }
 
-/* line 603, sass/layout/_main.scss */
+/* line 604, sass/layout/_main.scss */
 .image {
   height: 400px;
 }
 
-/* line 607, sass/layout/_main.scss */
+/* line 608, sass/layout/_main.scss */
 .image-with-text {
   height: 600px;
 }
 
-/* line 612, sass/layout/_main.scss */
+/* line 613, sass/layout/_main.scss */
 .icon-box {
   float: left;
   padding: 20px 120px 20px 0;
 }
 @media screen and (max-width: 480px) {
-  /* line 612, sass/layout/_main.scss */
+  /* line 613, sass/layout/_main.scss */
   .icon-box {
     padding: 20px;
     text-align: center;
   }
 }
-/* line 622, sass/layout/_main.scss */
+/* line 623, sass/layout/_main.scss */
 .icon-box h5 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 628, sass/layout/_main.scss */
+/* line 629, sass/layout/_main.scss */
 .listing-text h3 a {
   color: white;
 }
 
-/* line 633, sass/layout/_main.scss */
+/* line 634, sass/layout/_main.scss */
 .schedule-box {
   width: 50%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 638, sass/layout/_main.scss */
+/* line 639, sass/layout/_main.scss */
 .schedule-box .strong {
   font-family: "Avenir Next Cyr W00 Bold";
 }
-/* line 641, sass/layout/_main.scss */
+/* line 642, sass/layout/_main.scss */
 .schedule-box .blue {
   color: #0ebde8;
 }
 
-/* line 646, sass/layout/_main.scss */
+/* line 647, sass/layout/_main.scss */
 .buttons h3, .form h3 {
   margin-bottom: 0;
 }
 
-/* line 650, sass/layout/_main.scss */
+/* line 651, sass/layout/_main.scss */
 .buttons p, .form p {
   margin-bottom: 15px;
 }
 
-/* line 654, sass/layout/_main.scss */
+/* line 655, sass/layout/_main.scss */
 .regular-font {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 
-/* line 658, sass/layout/_main.scss */
+/* line 659, sass/layout/_main.scss */
 .buttons-cta {
   display: inline;
   padding: 25px 35px 25px 25px;
@@ -5751,7 +5752,7 @@ section {
   position: relative;
   float: left;
 }
-/* line 667, sass/layout/_main.scss */
+/* line 668, sass/layout/_main.scss */
 .buttons-cta .right {
   display: inline-block;
   width: 1.5em;
@@ -5762,7 +5763,7 @@ section {
   border: 0.1em solid #2791bd;
   line-height: 1.1em;
 }
-/* line 678, sass/layout/_main.scss */
+/* line 679, sass/layout/_main.scss */
 .buttons-cta .right:after {
   content: '';
   display: inline-block;
@@ -5776,24 +5777,24 @@ section {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
-/* line 692, sass/layout/_main.scss */
+/* line 693, sass/layout/_main.scss */
 .buttons-cta:hover {
   background: white;
   color: #2791bd;
   border: 3px solid #2791bd;
   padding: 22px 32px 22px 22px;
 }
-/* line 698, sass/layout/_main.scss */
+/* line 699, sass/layout/_main.scss */
 .buttons-cta:hover .right {
   border: 0.1em solid #2791bd;
 }
-/* line 701, sass/layout/_main.scss */
+/* line 702, sass/layout/_main.scss */
 .buttons-cta:hover .right::after {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
 
-/* line 710, sass/layout/_main.scss */
+/* line 711, sass/layout/_main.scss */
 .submit-buttons {
   display: inline;
   padding: 10px 20px 10px 10px;
@@ -5804,7 +5805,7 @@ section {
   float: left;
   margin-top: 30px;
 }
-/* line 720, sass/layout/_main.scss */
+/* line 721, sass/layout/_main.scss */
 .submit-buttons .right {
   display: inline-block;
   width: 1.5em;
@@ -5814,7 +5815,7 @@ section {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 730, sass/layout/_main.scss */
+/* line 731, sass/layout/_main.scss */
 .submit-buttons .right:after {
   content: '';
   display: inline-block;
@@ -5827,44 +5828,44 @@ section {
   transform: rotate(45deg);
 }
 
-/* line 744, sass/layout/_main.scss */
+/* line 745, sass/layout/_main.scss */
 .content-half {
   padding-right: 20px;
   margin-top: 20px;
 }
-/* line 748, sass/layout/_main.scss */
+/* line 749, sass/layout/_main.scss */
 .content-half h5 {
   font-family: "Avenir Next Cyr W00 Bold";
   margin-bottom: 0;
 }
 
-/* line 754, sass/layout/_main.scss */
+/* line 755, sass/layout/_main.scss */
 .content-text {
   padding: 50px;
   float: left;
 }
-/* line 758, sass/layout/_main.scss */
+/* line 759, sass/layout/_main.scss */
 .content-text p {
   color: black;
 }
-/* line 762, sass/layout/_main.scss */
+/* line 763, sass/layout/_main.scss */
 .content-text h4 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 768, sass/layout/_main.scss */
+/* line 769, sass/layout/_main.scss */
 .side-text p {
   margin-bottom: 3px;
   font-size: 10px;
   color: #494949;
 }
 
-/* line 775, sass/layout/_main.scss */
+/* line 776, sass/layout/_main.scss */
 #content {
   float: left;
 }
 
-/* line 780, sass/layout/_main.scss */
+/* line 781, sass/layout/_main.scss */
 .thumbnail {
   float: left;
   width: 100%;
@@ -5872,32 +5873,32 @@ section {
   margin-bottom: 15px;
 }
 
-/* line 787, sass/layout/_main.scss */
+/* line 788, sass/layout/_main.scss */
 .single-post main, .blog main, .page-template-global-network main, main {
   border-top: 5px solid #fec935;
 }
 
-/* line 791, sass/layout/_main.scss */
+/* line 792, sass/layout/_main.scss */
 .parent-page-residential-experiences main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 799, sass/layout/_main.scss */
+/* line 800, sass/layout/_main.scss */
 .parent-page-online main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 803, sass/layout/_main.scss */
+/* line 804, sass/layout/_main.scss */
 .parent-page-residential main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 807, sass/layout/_main.scss */
+/* line 808, sass/layout/_main.scss */
 .parent-page-research-ideas main {
   border-top: 5px solid #712880;
 }
 
-/* line 817, sass/layout/_main.scss */
+/* line 818, sass/layout/_main.scss */
 .blog-sidebar {
   padding: 50px 30px;
   background-color: #3a3a3a;
@@ -5906,20 +5907,20 @@ section {
   width: 100%;
 }
 
-/* line 825, sass/layout/_main.scss */
+/* line 826, sass/layout/_main.scss */
 .blog-content {
   float: left;
   padding: 50px;
   width: 100%;
 }
 @media screen and (max-width: 480px) {
-  /* line 825, sass/layout/_main.scss */
+  /* line 826, sass/layout/_main.scss */
   .blog-content {
     padding: 20px;
   }
 }
 
-/* line 835, sass/layout/_main.scss */
+/* line 836, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -5932,49 +5933,49 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 847, sass/layout/_main.scss */
+/* line 848, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 852, sass/layout/_main.scss */
+/* line 853, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 856, sass/layout/_main.scss */
+/* line 857, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 859, sass/layout/_main.scss */
+/* line 860, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 864, sass/layout/_main.scss */
+/* line 865, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 869, sass/layout/_main.scss */
+/* line 870, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 875, sass/layout/_main.scss */
+/* line 876, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 880, sass/layout/_main.scss */
+/* line 881, sass/layout/_main.scss */
 .blog-categories ul li:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-/* line 882, sass/layout/_main.scss */
+/* line 883, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
@@ -5982,40 +5983,40 @@ section {
   opacity: 1;
 }
 
-/* line 892, sass/layout/_main.scss */
+/* line 893, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 897, sass/layout/_main.scss */
+/* line 898, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 900, sass/layout/_main.scss */
+/* line 901, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
   word-break: break-word;
 }
-/* line 906, sass/layout/_main.scss */
+/* line 907, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 909, sass/layout/_main.scss */
+/* line 910, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 914, sass/layout/_main.scss */
+/* line 915, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 919, sass/layout/_main.scss */
+/* line 920, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 923, sass/layout/_main.scss */
+/* line 924, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
@@ -6026,17 +6027,17 @@ section {
   line-height: 20px;
 }
 
-/* line 933, sass/layout/_main.scss */
+/* line 934, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 937, sass/layout/_main.scss */
+/* line 938, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 941, sass/layout/_main.scss */
+/* line 942, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -6044,51 +6045,51 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 948, sass/layout/_main.scss */
+/* line 949, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 951, sass/layout/_main.scss */
+/* line 952, sass/layout/_main.scss */
 .social-icons a {
   color: #a9a9a9;
 }
-/* line 955, sass/layout/_main.scss */
+/* line 956, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 961, sass/layout/_main.scss */
+/* line 962, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 965, sass/layout/_main.scss */
+/* line 966, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 970, sass/layout/_main.scss */
+/* line 971, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 976, sass/layout/_main.scss */
+/* line 977, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 984, sass/layout/_main.scss */
+/* line 985, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 988, sass/layout/_main.scss */
+/* line 989, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
@@ -6096,22 +6097,22 @@ section {
   background-color: black;
 }
 
-/* line 996, sass/layout/_main.scss */
+/* line 997, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 50px;
   height: 100%;
 }
-/* line 1001, sass/layout/_main.scss */
+/* line 1002, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 1005, sass/layout/_main.scss */
+/* line 1006, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 1010, sass/layout/_main.scss */
+/* line 1011, sass/layout/_main.scss */
 .triangle-bar {
   width: 100%;
   float: left;
@@ -6120,7 +6121,7 @@ section {
   bottom: 0;
 }
 
-/* line 1018, sass/layout/_main.scss */
+/* line 1019, sass/layout/_main.scss */
 .triangle-block {
   width: calc(50% - 60px);
   float: left;
@@ -6129,7 +6130,7 @@ section {
   background-color: white;
 }
 
-/* line 1026, sass/layout/_main.scss */
+/* line 1027, sass/layout/_main.scss */
 .triangle-left {
   width: 0;
   height: 0;
@@ -6140,7 +6141,7 @@ section {
   display: inline;
 }
 
-/* line 1036, sass/layout/_main.scss */
+/* line 1037, sass/layout/_main.scss */
 .triangle-right {
   width: 0;
   height: 0;
@@ -6151,7 +6152,7 @@ section {
   display: inline;
 }
 
-/* line 1046, sass/layout/_main.scss */
+/* line 1047, sass/layout/_main.scss */
 #loadmore-posts {
   display: none;
   clear: both;
@@ -6166,25 +6167,25 @@ section {
   color: white;
   margin-top: 10px;
 }
-/* line 1060, sass/layout/_main.scss */
+/* line 1061, sass/layout/_main.scss */
 #loadmore-posts:hover {
   background-color: white;
   color: #fec935;
   cursor: pointer;
 }
 
-/* line 1067, sass/layout/_main.scss */
+/* line 1068, sass/layout/_main.scss */
 .page-numbers {
   display: none;
 }
 
-/* line 1068, sass/layout/_main.scss */
+/* line 1069, sass/layout/_main.scss */
 a.next.page-numbers {
   display: block;
   color: white;
 }
 
-/* line 1069, sass/layout/_main.scss */
+/* line 1070, sass/layout/_main.scss */
 a.next.page-numbers:hover {
   display: block;
   color: #fec935;
