--- a/sass/grid/_config.scss
+++ b/sass/grid/_config.scss
@@ -26,6 +26,7 @@ $base-width: if($is-fluid, 100%, ($base-col-width + $base-gutter-width) * $base-
 
 
 $desktop-width: 1200px ;
+$tablet-landscape-width: 860px;
 $tablet-width: 768px ; // the tablet width media query
 $mobile-portrait-width: 300px ; // the mobile portrait media query
 $mobile-landscape-width: 480px ; // the mobile landscape media query
