hide menu on tablet and mobile

--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -339,6 +339,9 @@
 		border-bottom: 3px solid #616161;
 	}
 
+	@include mq($tablet-width, 'max-width') {
+		 display: none;
+	}
 }
 
 .utilities-nav {
