--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -585,6 +585,10 @@ section {
   font-family: $font-family--heavy;
 }
 
+.email-signup {
+  height: 275px;
+}
+
 .email-signup-text {
   padding: 50px;
 }
